--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://bennakaouher.github.io/portfolio",
+  "homepage":"https://bennakaouher.github.io/MonPortfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
